--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,11 @@ scikit-learn
 websockets
 openai>=1.0.0
 python-dotenv 
+tqdm>=4.64.0
+
+# FAISS
+faiss-cpu>=1.7.4  # Use faiss-gpu for GPU support
+
+# RAG system additions
+transformers>=4.30.0
+colorama>=0.4.4
