--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "three": "^0.158.0"
